--- a/work/msi_2021/index.html
+++ b/work/msi_2021/index.html
@@ -13,12 +13,12 @@
 		<link type="text/css" rel="stylesheet" href="../../css/work.css" />
 
 
-
 		<!--Animate Css-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 	</head>
 	<body id="project">
+
 
 
 		<header>
@@ -38,70 +38,58 @@
 		</header>
 
 
+
 		<main>
 			<div class="outer">
-				<article>
 
+				<article>
 					<section class="intro clearfix">
 						<div class="intro-info animate__animated animate__fadeInLeft">
 							<h2>
 								PROJECT
 							</h2>
 							<ul>
-								<li>REACH:<br />Brand & Marketing</li>
+								<li>2021 MSI Graphics<br />Web & Print - Assorted</li>
 							</ul>
-
 							<h2>
 								ROLES
 							</h2>
 							<ul>
-								<li>Branding</li>
-								<li>Typography</li>
-								<li>Print Design</li>
+								<li>Marketing</li>
+								<li>Graphic Design</li>
+								<li>Photo Manipulation</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								REACH is an educational program that assists current and former
-								foster youth students of Mt. San Antonio College. They
-								offer foster students a welcoming environment
-								to get individual counseling, discover community resources, and
-								participate in events and workshops.
-							</p>
-							<p>
-								I was tasked with creating brand and marketing materials
-								to spread information and awareness of the program and their events.
-								I created and hand-drew a custom typographic slogan for use on branded materials,
-								utilizing a warm blue color scheme derived from the foster care, blue heart symbol.
+								Here is a collection of web and print marketing banners I've done for MSI marketing for 2021.
+								The collection consists primarily of product-focused marketing with some event materials.
 							</p>
 						</div>
 
 					</section>
 
 
-					<img src="img/mock-1600.jpg" class="center-img"/>
-
-					<img src="img/slogan.jpg" class="center-img" />
-
-					<img src="img/style.jpg" class="center-img" />
 
 
-					<img src="img/mats-1.jpg" class="center-img" />
+					<img src="img/kv.jpg" class="center-img" />
 
 
-					<img src="img/mats-2.jpg" class="center-img" />
+					<img src="img/sections-1.jpg" class="center-img" />
 
+					<img src="img/sections-2.jpg" class="center-img" />
+
+					<img src="img/sections-3.jpg" class="center-img" />
 
 
 
 				</article>
 
 
+
 			</div>
 
-
 		</main>
-
 
 
 
@@ -143,5 +131,30 @@
 
 		<!--Site JS-->
 		<script type="text/javascript" src="js/site.js"></script>
+
+		<!--Swiper JS-->
+		<script src="../../js/swiper/swiper.min.js"></script>
+		<script>
+			const swiper = new Swiper('.swiper', {
+				// Optional parameters
+				direction: 'horizontal',
+				loop: true,
+
+				// If we need pagination
+				pagination: {
+					el: '.swiper-pagination',
+				},
+
+				// Navigation arrows
+				navigation: {
+					nextEl: '.swiper-button-next',
+					prevEl: '.swiper-button-prev',
+				},
+
+			});
+		</script>
+
+
+
 	</body>
 </html>
