--- a/work/msi_oled/index.html
+++ b/work/msi_oled/index.html
@@ -20,7 +20,6 @@
 	</head>
 	<body id="project">
 
-
 		<header>
 			<div class="outer clearfix">
 				<nav>
@@ -38,6 +37,8 @@
 		</header>
 
 
+
+
 		<main>
 			<div class="outer">
 				<article>
@@ -48,57 +49,50 @@
 								PROJECT
 							</h2>
 							<ul>
-								<li>REACH:<br />Brand & Marketing</li>
+								<li>
+									Creator 15 OLED<br />
+									Video Social Posts
+								</li>
 							</ul>
 
 							<h2>
 								ROLES
 							</h2>
 							<ul>
-								<li>Branding</li>
-								<li>Typography</li>
-								<li>Print Design</li>
+								<li>Visual Effects</li>
+								<li>Motion Graphics</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								REACH is an educational program that assists current and former
-								foster youth students of Mt. San Antonio College. They
-								offer foster students a welcoming environment
-								to get individual counseling, discover community resources, and
-								participate in events and workshops.
+								The MSI Creator 15 is a laptop for creators that sports an OLED (organic light-emitting diode) monitor display.
+								I was tasked with creating video social posts to highlight the enhanced contrast and color fidelity of OLED.
 							</p>
 							<p>
-								I was tasked with creating brand and marketing materials
-								to spread information and awareness of the program and their events.
-								I created and hand-drew a custom typographic slogan for use on branded materials,
-								utilizing a warm blue color scheme derived from the foster care, blue heart symbol.
+								With After Effects, I composited static product assets with stock footage to create 5 second looping videos for social media.
 							</p>
 						</div>
 
 					</section>
 
+					<div class="video-wrapper">
+						<video width="640" height="640" autoplay muted loop>
+						  <source src="img/vid1.mp4" type="video/mp4">
+						</video>
+					</div>
 
-					<img src="img/mock-1600.jpg" class="center-img"/>
-
-					<img src="img/slogan.jpg" class="center-img" />
-
-					<img src="img/style.jpg" class="center-img" />
-
-
-					<img src="img/mats-1.jpg" class="center-img" />
-
-
-					<img src="img/mats-2.jpg" class="center-img" />
-
-
+					<div class="video-wrapper">
+						<video width="640" height="640" autoplay muted loop>
+						  <source src="img/vid2.mp4" type="video/mp4">
+						</video>
+					</div>
 
 
 				</article>
 
 
-			</div>
 
+			</div>
 
 		</main>
 
