--- a/work/msi_optix/index.html
+++ b/work/msi_optix/index.html
@@ -20,7 +20,6 @@
 	</head>
 	<body id="project">
 
-
 		<header>
 			<div class="outer clearfix">
 				<nav>
@@ -38,6 +37,8 @@
 		</header>
 
 
+
+
 		<main>
 			<div class="outer">
 				<article>
@@ -48,57 +49,41 @@
 								PROJECT
 							</h2>
 							<ul>
-								<li>REACH:<br />Brand & Marketing</li>
+								<li>Optix MPG321QRF-QD<br />Etailer A+ Content</li>
 							</ul>
 
 							<h2>
 								ROLES
 							</h2>
 							<ul>
-								<li>Branding</li>
-								<li>Typography</li>
-								<li>Print Design</li>
+								<li>Marketing</li>
+								<li>Graphic Design</li>
+								<li>Photo Manipulation</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								REACH is an educational program that assists current and former
-								foster youth students of Mt. San Antonio College. They
-								offer foster students a welcoming environment
-								to get individual counseling, discover community resources, and
-								participate in events and workshops.
+								The MSI Optix MPG321QRF-QD is 32" Gaming Monitor that introduces improved color range with Quantum Dot technology.
+								I was tasked with updating the product's key visual and etailer marketing content, highlighting Quantum Dot technology and
+								key gaming features such as Console Mode and Rapid IPS.
 							</p>
 							<p>
-								I was tasked with creating brand and marketing materials
-								to spread information and awareness of the program and their events.
-								I created and hand-drew a custom typographic slogan for use on branded materials,
-								utilizing a warm blue color scheme derived from the foster care, blue heart symbol.
+								For the key visual, I went with a richly colored monitor visuals with extruding effects for a layer of dynamic immersion.
+								Immediately under the key visual, I added a main feature summary panel to improve the consumer shopping experience.
 							</p>
 						</div>
 
 					</section>
 
 
-					<img src="img/mock-1600.jpg" class="center-img"/>
 
-					<img src="img/slogan.jpg" class="center-img" />
-
-					<img src="img/style.jpg" class="center-img" />
-
-
-					<img src="img/mats-1.jpg" class="center-img" />
-
-
-					<img src="img/mats-2.jpg" class="center-img" />
-
-
-
+					<img src="img/optix.jpg" class="center-img" />
 
 				</article>
 
 
-			</div>
 
+			</div>
 
 		</main>
 
