--- a/work/msi_public_domain/index.html
+++ b/work/msi_public_domain/index.html
@@ -20,7 +20,6 @@
 	</head>
 	<body id="project">
 
-
 		<header>
 			<div class="outer clearfix">
 				<nav>
@@ -38,6 +37,8 @@
 		</header>
 
 
+
+
 		<main>
 			<div class="outer">
 				<article>
@@ -48,57 +49,41 @@
 								PROJECT
 							</h2>
 							<ul>
-								<li>REACH:<br />Brand & Marketing</li>
+								<li>MSI x Public Domain<br />April Fool's Social Campaign</li>
 							</ul>
 
 							<h2>
 								ROLES
 							</h2>
 							<ul>
-								<li>Branding</li>
-								<li>Typography</li>
-								<li>Print Design</li>
+								<li>Creative Direction</li>
+								<li>Graphic Design</li>
+								<li>Photo Manipulation</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								REACH is an educational program that assists current and former
-								foster youth students of Mt. San Antonio College. They
-								offer foster students a welcoming environment
-								to get individual counseling, discover community resources, and
-								participate in events and workshops.
+								I collaborated with the MSI social media coordinator to create a humorous social post for April Fools 2022.
+								Having observed a growth in popularity in brand crossovers, I came up the concept of a mock announcement post of a MSI crossover
+								with the entirety of public domain works.
 							</p>
 							<p>
-								I was tasked with creating brand and marketing materials
-								to spread information and awareness of the program and their events.
-								I created and hand-drew a custom typographic slogan for use on branded materials,
-								utilizing a warm blue color scheme derived from the foster care, blue heart symbol.
+								The social post consisted of an album that initially captures audience attention
+								with legitimately attractive product-reskins that eventually develop into humor with escalating absurdity.
 							</p>
 						</div>
 
 					</section>
 
 
-					<img src="img/mock-1600.jpg" class="center-img"/>
 
-					<img src="img/slogan.jpg" class="center-img" />
-
-					<img src="img/style.jpg" class="center-img" />
-
-
-					<img src="img/mats-1.jpg" class="center-img" />
-
-
-					<img src="img/mats-2.jpg" class="center-img" />
-
-
-
+					<img src="img/april_fools.jpg" class="center-img" />
 
 				</article>
 
 
-			</div>
 
+			</div>
 
 		</main>
 
