--- a/work/msi_yuumei/index.html
+++ b/work/msi_yuumei/index.html
@@ -20,7 +20,6 @@
 	</head>
 	<body id="project">
 
-
 		<header>
 			<div class="outer clearfix">
 				<nav>
@@ -38,6 +37,8 @@
 		</header>
 
 
+
+
 		<main>
 			<div class="outer">
 				<article>
@@ -48,57 +49,42 @@
 								PROJECT
 							</h2>
 							<ul>
-								<li>REACH:<br />Brand & Marketing</li>
+								<li>MSI x Yuumei<br />Charity Collaboration</li>
 							</ul>
 
 							<h2>
 								ROLES
 							</h2>
 							<ul>
-								<li>Branding</li>
-								<li>Typography</li>
-								<li>Print Design</li>
+								<li>Web Design</li>
+								<li>HTML/CSS</li>
+								<li>Javascript</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								REACH is an educational program that assists current and former
-								foster youth students of Mt. San Antonio College. They
-								offer foster students a welcoming environment
-								to get individual counseling, discover community resources, and
-								participate in events and workshops.
+								MSI partnered with artist, Yuumei, to raise funds for environmental charities:
+								Rainforest Trust, Center for Bioligical Diversity, and Citizens Cimate Lobby.
+								I was tasked to design and develop the charity landing page using Yuumei's provided key art and process video.
+
 							</p>
 							<p>
-								I was tasked with creating brand and marketing materials
-								to spread information and awareness of the program and their events.
-								I created and hand-drew a custom typographic slogan for use on branded materials,
-								utilizing a warm blue color scheme derived from the foster care, blue heart symbol.
+								The collaboration reached it's target, raising over $100,000 for the environmental charities.
+
 							</p>
 						</div>
 
 					</section>
 
 
-					<img src="img/mock-1600.jpg" class="center-img"/>
 
-					<img src="img/slogan.jpg" class="center-img" />
-
-					<img src="img/style.jpg" class="center-img" />
-
-
-					<img src="img/mats-1.jpg" class="center-img" />
-
-
-					<img src="img/mats-2.jpg" class="center-img" />
-
-
-
+					<img src="img/yuumei.jpg" class="center-img" />
 
 				</article>
 
 
-			</div>
 
+			</div>
 
 		</main>
 
