--- a/work/study_play/index.html
+++ b/work/study_play/index.html
@@ -7,7 +7,7 @@
 		<title>Rich Huynh - Designer + Developer</title>
 		<link rel="shortcut icon" type="image/jpg" href="img/rh-favicon.png"/>
 
-		<link type="text/css" rel="stylesheet" href="../../css/normalize.css" />
+		<link type="text/css" rel="stylesheet" href="../../css/font-awesome/font-awesome.css" />
 
 		<link type="text/css" rel="stylesheet" href="../../css/style.css" />
 		<link type="text/css" rel="stylesheet" href="../../css/work.css" />
@@ -21,9 +21,17 @@
 	<body id="project">
 
 		<header>
-			<div class="outer">
+			<div class="outer clearfix">
 				<nav>
 					<a class="name" href="../../">Rich Huynh</a>
+					<ul>
+						<li>
+							<a class="topnav-link" href="../../#work">Work</a>
+						</li>
+						<li>
+							<a class="topnav-link" href="https://www.linkedin.com/in/richhuynh">LinkedIn</a>
+						</li>
+					</ul>
 				</nav>
 			</div>
 		</header>
@@ -34,7 +42,7 @@
 		<main>
 			<div class="outer">
 				<article>
-					<img src="img/preview.jpg" style="display:block; width:100%;"/>
+
 					<section class="intro clearfix">
 						<div class="intro-info animate__animated animate__fadeInLeft">
 							<h2>
@@ -53,78 +61,35 @@
 								<li>Illustration</li>
 							</ul>
 						</div>
-						<div class="intro-copy animate__animated animate__fadeInUp">
+						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
 								MSI marketing scheduled to run a web/social media sweepstakes
 								to promote computer gaming peripherals for the back to school season.
 								With the target audience being students and gamers,
 								I was tasked with designing an energetic, youthful aesthetic for the campaign.
 							</p>
+							<p>
+								The campaign's website was responsively designed to support mobile and desktop browsers.
+								The content consists of the key visual, short intro, a list of prizes, instructions to enter,
+								and an embedded sweepstakes form. Content slide-in animation was added to support an energetic, dynamic tone.
+							</p>
 						</div>
 
 					</section>
 
 
-
-					<div class="divider" aria-hidden="true"></div>
-
-
-					<div class="project-copy">
-						<h3>Key Visual</h3>
-						<p>
-							The campaign's key visual was primarily composed of geometric vectors
-							to establish a clean and modern visual style. The bright, contrasting,
-							yellow color scheme was chosen to establish youthful energy that
-							is also reminiscent of school buses and composition books.
-							The illustrated controller was used as a main graphic element
-							due to its prominence as a gaming symbol.
-						</p>
-					</div>
-
+					<video class="center-vid" width="320" height="240" autoplay muted loop>
+					  <source src="img/webview.mp4" type="video/mp4">
+					</video>
 
 					<img src="img/kv.jpg" class="center-img" />
-
-
-					<div class="project-copy">
-						<h3>Style</h3>
-						<p>
-							The style choices for the campaign's website were directly pulled from the key visual.
-							Fonts, colors, and graphic elements were reused to
-							maintain consistency in the website's design and the key visual.
-						</p>
-					</div>
-
 
 
 					<img src="img/style.jpg" class="center-img" />
 
 
-
-					<div class="project-copy">
-						<h3>Responsive Web Design</h3>
-						<p>
-							The campaign's website was responsively design to support mobile and desktop browsers.
-							The content consists of the key visual, short intro, a list of prizes, instructions to enter,
-							and an embedded sweepstakes form. Simple slide in animations were added to support the energetic, dynamic tone.
-						</p>
-					</div>
-
-					<img src="img/responsive.jpg" class="center-img" />
-					<video width="320" height="240" autoplay muted loop>
-					  <source src="img/webview.mp4" type="video/mp4">
-					</video>
-
-
-
-					<div class="project-copy">
-						<h3>Social Media Banners</h3>
-						<p>
-							The key visual was reused to create banner ads and social graphics to
-							promote the website and campaign.
-						</p>
-					</div>
 					<img src="img/social-1.jpg" class="center-img" />
-					<br />
+
 					<img src="img/social-2.jpg" class="center-img" />
 
 				</article>
