--- a/work/study_play/index.html
+++ b/work/study_play/index.html
@@ -78,7 +78,7 @@
 					</section>
 
 
-					<video class="center-vid" width="320" height="240" autoplay muted loop>
+					<video class="center-vid" width="320" height="240" autoplay muted loop controls>
 					  <source src="img/webview.mp4" type="video/mp4">
 					</video>
 
