--- a/work/msi_oled/index.html
+++ b/work/msi_oled/index.html
@@ -76,13 +76,13 @@
 					</section>
 
 					<div class="video-wrapper">
-						<video width="640" height="640" autoplay muted loop>
+						<video width="640" height="640" autoplay muted loop controls>
 						  <source src="img/vid1.mp4" type="video/mp4">
 						</video>
 					</div>
 
 					<div class="video-wrapper">
-						<video width="640" height="640" autoplay muted loop>
+						<video width="640" height="640" autoplay muted loop controls>
 						  <source src="img/vid2.mp4" type="video/mp4">
 						</video>
 					</div>
