--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@
 						<div class="portfolio-wrap">
 							<ul class="work-list">
 								<li class="work-box">
+									<a href="work/msi_dribble">
+										<div class="work-image" style="background-image:url('img/gallery/msi_dribble.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">MSI Creator Animated Dribble Ad - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>MSI Creator</h3>
+										<p>Dribble Animated Ad</p>
+										<ul class="role-list">
+											<li>Art Direction</li>
+											<li>Video Composition</li>
+											<li>Motion Design</li>
+										</ul>
+									</div>
+								</li>
+								<li class="work-box">
 									<a href="work/msi_public_domain">
 										<div class="work-image" style="background-image:url('img/gallery/april_fools.jpg')" aria-hidden="true"></div>
 										<span class="sr-only">MSI x Public Domain - Learn More</span>
