--- a/work/msi_public_domain/index.html
+++ b/work/msi_public_domain/index.html
@@ -77,7 +77,8 @@
 
 
 
-					<img src="img/april_fools.jpg" class="center-img" />
+					<img src="img/april_fools.jpg" class="center-img" alt="5 April Fools Products. 
+					Great Wave Laptop, Starry Night Monitor, Pythagorean Theorem Mouse, Happy Birthday Power Supply, Great Gatsby PC." />
 
 				</article>
 
