--- a/work/msi_dribble/index.html
+++ b/work/msi_dribble/index.html
@@ -72,7 +72,7 @@
 							</p>
 							<p>
 								After having sourced and cut the funky hiphop background track, I utilized swift, poppy animations to give a dynamic feel.
-								I utilized a bright, warm color pallete to compliment the colorful energy of the music.
+								I used a bright, warm color pallete to compliment the colorful energy of the music.
 							</p>
 						</div>
 
