--- a/work/msi_brand_store/index.html
+++ b/work/msi_brand_store/index.html
@@ -70,9 +70,8 @@
 								selected photography and typographic consistency.
 							</p>
 							<p>
-								The brand store update was an ongoing process, with redesigns being rolled out to acommodate for new prpoduct releases.
-								The home page was the first to be updated, and in the first month saw an +20% improvement in Orders/Views over the previous month.
-								In 6 months, the page saw an average +60% improvement in Orders/Views per month YoY.
+								The brand store update was an ongoing process, with redesigns being rolled out to accommodate for new product releases. The home page was the first to be updated, and in the first month saw an +20% improvement in Orders/Views over the previous month. In 6 months, the page saw an average +60% improvement in Orders/Views per month YoY.
+
 							</p>
 						</div>
 
@@ -102,14 +101,9 @@
 
 
 
-
-
-			<!--
-			<div id="project-footer" class="clearfix">
-				<a href="" class="animate__animated animate__fadeInLeft">Previous Project</a>
-				<a href="" class="animate__animated animate__fadeInRight">Next Project</a>
-			</div>
-		-->
+		<div id="project-footer">
+			<button class="scrollToTop" onclick="pageScrollTo('#project')">Back to Top</button>
+		</div>
 
 
 		<footer>
@@ -135,33 +129,11 @@
 		<!--JS-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script src="js/vendor/hammer-time.min.js"></script>
+		<script src="../../js/vendor/hammer-time.min.js"></script>
 
 
 		<!--Site JS-->
-		<script type="text/javascript" src="js/site.js"></script>
-
-		<!--Swiper JS-->
-		<script src="../../js/swiper/swiper.min.js"></script>
-		<script>
-			const swiper = new Swiper('.swiper', {
-				// Optional parameters
-				direction: 'horizontal',
-				loop: true,
-
-				// If we need pagination
-				pagination: {
-					el: '.swiper-pagination',
-				},
-
-				// Navigation arrows
-				navigation: {
-					nextEl: '.swiper-button-next',
-					prevEl: '.swiper-button-prev',
-				},
-
-			});
-		</script>
+		<script type="text/javascript" src="../../js/site.js"></script>
 
 
 
