--- a/work/msi_dribble/index.html
+++ b/work/msi_dribble/index.html
@@ -71,8 +71,9 @@
 								to inject a sense of "creative spirit" into the MSI Creator Series.
 							</p>
 							<p>
-								After having sourced and cut the funky hiphop background track, I utilized swift, poppy animations to give a dynamic feel.
-								I used a bright color pallete with a mixed medium art style to compliment the colorful energy of the music.
+								After having sourced and cut the funky hiphop background track,
+								I utilized swift, poppy animations to give a dynamic feel.
+								I used a bright color pallete with a mixed medium aesthetic to compliment the colorful energy of the music.
 							</p>
 						</div>
 
@@ -95,17 +96,16 @@
 
 		</main>
 
+		<!--
+		<div id="project-footer" class="clearfix">
+			<a href="" class="animate__animated animate__fadeInLeft">Previous Project</a>
+			<a href="" class="animate__animated animate__fadeInRight">Next Project</a>
+		</div>
+	-->
 
-
-
-
-
-			<!--
-			<div id="project-footer" class="clearfix">
-				<a href="" class="animate__animated animate__fadeInLeft">Previous Project</a>
-				<a href="" class="animate__animated animate__fadeInRight">Next Project</a>
-			</div>
-		-->
+		<div id="project-footer">
+			<button class="scrollToTop" onclick="pageScrollTo('#project')">Back to Top</button>
+		</div>
 
 
 		<footer>
@@ -131,10 +131,10 @@
 		<!--JS-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script src="js/vendor/hammer-time.min.js"></script>
+		<script src="../../js/vendor/hammer-time.min.js"></script>
 
 
 		<!--Site JS-->
-		<script type="text/javascript" src="js/site.js"></script>
+		<script type="text/javascript" src="../../js/site.js"></script>
 	</body>
 </html>
