--- a/work/msi_oled/index.html
+++ b/work/msi_oled/index.html
@@ -100,42 +100,38 @@
 
 
 
-
-			<!--
-			<div id="project-footer" class="clearfix">
-				<a href="" class="animate__animated animate__fadeInLeft">Previous Project</a>
-				<a href="" class="animate__animated animate__fadeInRight">Next Project</a>
+			<div id="project-footer">
+				<button class="scrollToTop" onclick="pageScrollTo('#project')">Back to Top</button>
 			</div>
-		-->
 
 
-		<footer>
-			<div class="outer">
-				<nav>
-					<ul>
-						<li>
-							<a target="_blank" href="https://www.linkedin.com/in/richhuynh">
-								<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
-							</a>
-						</li>
-						<li>
-							<a target="_blank" href="https://github.com/richhuynhyo">
-								<i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
-							</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-		</footer>
+			<footer>
+				<div class="outer">
+					<nav>
+						<ul>
+							<li>
+								<a target="_blank" href="https://www.linkedin.com/in/richhuynh">
+									<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+								</a>
+							</li>
+							<li>
+								<a target="_blank" href="https://github.com/richhuynhyo">
+									<i class="fa fa-github-square fa-2x" aria-hidden="true"></i>
+								</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+			</footer>
 
 
-		<!--JS-->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script src="js/vendor/hammer-time.min.js"></script>
+			<!--JS-->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+			<script src="../../js/vendor/hammer-time.min.js"></script>
 
 
-		<!--Site JS-->
-		<script type="text/javascript" src="js/site.js"></script>
+			<!--Site JS-->
+			<script type="text/javascript" src="../../js/site.js"></script>
 	</body>
 </html>
