--- a/work/msi_yuumei/index.html
+++ b/work/msi_yuumei/index.html
@@ -64,12 +64,12 @@
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
 								MSI partnered with artist, Yuumei, to raise funds for environmental charities:
-								Rainforest Trust, Center for Bioligical Diversity, and Citizens Cimate Lobby.
+								Rainforest Trust, Center for Biological Diversity, and Citizens Climate Lobby.
 								I was tasked to design and develop the charity landing page using Yuumei's provided key art and process video.
 
 							</p>
 							<p>
-								The collaboration reached it's target, raising over $100,000 for the environmental charities.
+								The collaboration reached its target, raising over $100,000 for the environmental charities.
 
 							</p>
 						</div>
@@ -91,14 +91,9 @@
 
 
 
-
-
-			<!--
-			<div id="project-footer" class="clearfix">
-				<a href="" class="animate__animated animate__fadeInLeft">Previous Project</a>
-				<a href="" class="animate__animated animate__fadeInRight">Next Project</a>
-			</div>
-		-->
+		<div id="project-footer">
+			<button class="scrollToTop" onclick="pageScrollTo('#project')">Back to Top</button>
+		</div>
 
 
 		<footer>
@@ -124,10 +119,10 @@
 		<!--JS-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script src="js/vendor/hammer-time.min.js"></script>
+		<script src="../../js/vendor/hammer-time.min.js"></script>
 
 
 		<!--Site JS-->
-		<script type="text/javascript" src="js/site.js"></script>
+		<script type="text/javascript" src="../../js/site.js"></script>
 	</body>
 </html>
