--- a/work/msi_public_domain/index.html
+++ b/work/msi_public_domain/index.html
@@ -77,7 +77,7 @@
 
 
 
-					<img src="img/april_fools.jpg" class="center-img" alt="5 April Fools Products. 
+					<img src="img/april_fools.jpg" class="center-img" alt="5 April Fools Products.
 					Great Wave Laptop, Starry Night Monitor, Pythagorean Theorem Mouse, Happy Birthday Power Supply, Great Gatsby PC." />
 
 				</article>
@@ -91,14 +91,9 @@
 
 
 
-
-
-			<!--
-			<div id="project-footer" class="clearfix">
-				<a href="" class="animate__animated animate__fadeInLeft">Previous Project</a>
-				<a href="" class="animate__animated animate__fadeInRight">Next Project</a>
-			</div>
-		-->
+		<div id="project-footer">
+			<button class="scrollToTop" onclick="pageScrollTo('#project')">Back to Top</button>
+		</div>
 
 
 		<footer>
@@ -124,10 +119,10 @@
 		<!--JS-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script src="js/vendor/hammer-time.min.js"></script>
+		<script src="../../js/vendor/hammer-time.min.js"></script>
 
 
 		<!--Site JS-->
-		<script type="text/javascript" src="js/site.js"></script>
+		<script type="text/javascript" src="../../js/site.js"></script>
 	</body>
 </html>
