--- a/work/study_play/index.html
+++ b/work/study_play/index.html
@@ -104,13 +104,9 @@
 
 
 
-
-			<!--
-			<div id="project-footer" class="clearfix">
-				<a href="" class="animate__animated animate__fadeInLeft">Previous Project</a>
-				<a href="" class="animate__animated animate__fadeInRight">Next Project</a>
-			</div>
-		-->
+		<div id="project-footer">
+			<button class="scrollToTop" onclick="pageScrollTo('#project')">Back to Top</button>
+		</div>
 
 
 		<footer>
@@ -136,10 +132,10 @@
 		<!--JS-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-		<script src="js/vendor/hammer-time.min.js"></script>
+		<script src="../../js/vendor/hammer-time.min.js"></script>
 
 
 		<!--Site JS-->
-		<script type="text/javascript" src="js/site.js"></script>
+		<script type="text/javascript" src="../../js/site.js"></script>
 	</body>
 </html>
