alt tags and preload

--- a/work/msi_brand_store/index.html
+++ b/work/msi_brand_store/index.html
@@ -80,14 +80,14 @@
 
 
 
-					<img src="img/kv.jpg" class="center-img" />
+					<img src="img/kv.jpg" class="center-img" alt="Work Play Create Build Key visual." />
 
 
-					<img src="img/sections-1.jpg" class="center-img" />
+					<img src="img/sections-1.jpg" class="center-img" alt="Brand store laptop section." />
 
-					<img src="img/sections-2.jpg" class="center-img" />
+					<img src="img/sections-2.jpg" class="center-img" alt="Brand store desktop hardware section." />
 
-					<img src="img/sections-3.jpg" class="center-img" />
+					<img src="img/sections-3.jpg" class="center-img" alt="Brand store components section." />
 
 
 
