--- a/work/msi_dribble/index.html
+++ b/work/msi_dribble/index.html
@@ -80,7 +80,7 @@
 					</section>
 
 					<div class="video-wrapper">
-						<video width="800" height="600" loop controls>
+						<video width="800" height="600" loop controls preload="auto">
 						  <source src="img/creator-1600x1200.mp4" type="video/mp4">
 						</video>
 					</div>
