--- a/work/msi_optix/index.html
+++ b/work/msi_optix/index.html
@@ -77,7 +77,7 @@
 
 
 
-					<img src="img/optix.jpg" class="center-img" />
+					<img src="img/optix.jpg" class="center-img" alt="Optix A+ Content" />
 
 				</article>
 
