--- a/work/msi_yuumei/index.html
+++ b/work/msi_yuumei/index.html
@@ -78,7 +78,7 @@
 
 
 
-					<img src="img/yuumei.jpg" class="center-img" />
+					<img src="img/yuumei.jpg" class="center-img" alt="Yuumei Charity Landing Page" />
 
 				</article>
 
