--- a/work/reach_brand/index.html
+++ b/work/reach_brand/index.html
@@ -79,17 +79,17 @@
 					</section>
 
 
-					<img src="img/mock-1600.jpg" class="center-img"/>
+					<img src="img/mock-1600.jpg" class="center-img" alt="Reach Brochure."/>
 
-					<img src="img/slogan.jpg" class="center-img" />
+					<img src="img/slogan.jpg" class="center-img" alt="We Help Foster Youth typgraphy." />
 
-					<img src="img/style.jpg" class="center-img" />
-
-
-					<img src="img/mats-1.jpg" class="center-img" />
+					<img src="img/style.jpg" class="center-img" alt="Reach style guide." />
 
 
-					<img src="img/mats-2.jpg" class="center-img" />
+					<img src="img/mats-1.jpg" class="center-img" alt="Reach brochure inside and out." />
+
+
+					<img src="img/mats-2.jpg" class="center-img" alt="Reach Tshirt and retractable banner." />
 
 
 
