--- a/work/study_play/index.html
+++ b/work/study_play/index.html
@@ -82,15 +82,15 @@
 					  <source src="img/webview.mp4" type="video/mp4">
 					</video>
 
-					<img src="img/kv.jpg" class="center-img" />
+					<img src="img/kv.jpg" class="center-img" alt="Study and Play in Style." />
 
 
-					<img src="img/style.jpg" class="center-img" />
+					<img src="img/style.jpg" class="center-img" alt="Style guide." />
 
 
-					<img src="img/social-1.jpg" class="center-img" />
+					<img src="img/social-1.jpg" class="center-img" alt="Social Post." />
 
-					<img src="img/social-2.jpg" class="center-img" />
+					<img src="img/social-2.jpg" class="center-img" alt="Social banner." />
 
 				</article>
 
