--- a/work/msi_dribble/index.html
+++ b/work/msi_dribble/index.html
@@ -66,7 +66,7 @@
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								I was tasked with creating a short animated advertisement video for MSI's Creator Series laptops to be launched on the
+								I was tasked with creating a looping/animated ad for MSI's Creator Series laptops to be launched on the
 								creative platform, Dribble. As the sole designer on this project, I decided on a fun, energetic, colorful tone
 								to inject a sense of "creative spirit" into the MSI Creator Series.
 							</p>
@@ -80,8 +80,8 @@
 					</section>
 
 					<div class="video-wrapper">
-						<video width="800" height="600" loop controls preload="auto">
-						  <source src="img/creator-1600x1200.mp4" type="video/mp4">
+						<video width="800" height="600" playsinline loop controls preload="metadeta">
+						  <source src="img/creator-1600x1200.mp4#t=0.1" type="video/mp4">
 						</video>
 					</div>
 
