--- a/index.html
+++ b/index.html
@@ -205,6 +205,21 @@
 									</div>
 								</li>
 								<li class="work-box">
+									<a href="work/msi_rent">
+										<div class="work-image" style="background-image:url('img/gallery/msi_rent.jpg')" aria-hidden="true"></div>
+										<span class="sr-only">MSI Rent To Own - Learn More</span>
+									</a>
+									<div class="work-info">
+										<h3>MSI Rent To Own</h3>
+										<p>Landing Page</p>
+										<ul class="role-list">
+											<li>Web Design</li>
+											<li>HTML/CSS</li>
+											<li>Javascript</li>
+										</ul>
+									</div>
+								</li>
+								<li class="work-box">
 									<a href="work/msi_yuumei">
 										<div class="work-image" style="background-image:url('img/gallery/msi_yuumei.jpg')" aria-hidden="true"></div>
 										<span class="sr-only">MSI x Yuumei Charity Collaboration - Learn More</span>
