--- a/work/msi_2021/index.html
+++ b/work/msi_2021/index.html
@@ -55,31 +55,32 @@
 								ROLES
 							</h2>
 							<ul>
-								<li>Marketing</li>
 								<li>Graphic Design</li>
 								<li>Photo Manipulation</li>
 							</ul>
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								Here is a collection of web and print marketing banners I've done for MSI marketing for 2021.
-								The collection consists primarily of product-focused marketing with some event materials.
+								Here is a collection of social media graphics, banners, and printed event materials I've done for MSI marketing in 2021.
+								The collection consists of marketing graphics for a variety of computer hardware product lines.
+							</p>
+							<p>
+								Gaming product lines are portrayed in a futuristic, science-fiction tone with a sense of RGB lighting thrown in.
+								Creator product lines utilize a colorful, flat-vector aesthetic for a more modern, illustrative tone.
+
 							</p>
 						</div>
 
 					</section>
 
 
+					<img src="img/banners-2.jpg" class="center-img" alt="Set of gaming product graphics." />
+					<img src="img/banners-3.jpg" class="center-img" alt="Large cooler key visual." />
+					<img src="img/banners-1.jpg" class="center-img" alt="Variety of product graphics." />
+					<img src="img/banners-4.jpg" class="center-img" alt="Creator series printed promotional materials." />
 
 
-					<img src="img/kv.jpg" class="center-img" />
 
-
-					<img src="img/sections-1.jpg" class="center-img" />
-
-					<img src="img/sections-2.jpg" class="center-img" />
-
-					<img src="img/sections-3.jpg" class="center-img" />
 
 
 
