--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 						</div>
 						<p class="animate__animated animate__fadeInLeft animate__delay-4s">
 							<strong>I am Rich Huynh</strong>, a multidisciplinary designer with a background in
-							web development, digital marketing, and e-commerce. As a creative with a taste for adventure,
-							I enjoy exploring new technologies and mediums for artistic expression. I am currently
-							a Senior Designer at MSI, designing  marketing creative for computer gaming and hardware.
+							web development, digital marketing, and e-commerce. I am an artist at heart, a big picture thinker, a humanist, and a creative scholar.
+							I enjoy exploring new technologies and mediums for artistic expression.
 
 
 
