--- a/work/msi_optix/index.html
+++ b/work/msi_optix/index.html
@@ -63,13 +63,15 @@
 						</div>
 						<div class="intro-copy animate__animated animate__fadeInRight">
 							<p>
-								The MSI Optix MPG321QRF-QD is 32" Gaming Monitor that introduces improved color range with Quantum Dot technology.
-								I was tasked with updating the product's key visual and etailer marketing content, highlighting Quantum Dot technology and
-								key gaming features such as Console Mode and Rapid IPS.
+								The MSI Optix MPG321QRF-QD is a 32" Gaming Monitor that introduces improved color range with Quantum Dot technology.
+								I was tasked with updating the product's key visual and etailer marketing content. The project called for
+								greater focus on Quantum Dot technology while educating consumers on key gaming features such as Console Mode and Rapid IPS.
 							</p>
 							<p>
-								For the key visual, I went with a richly colored monitor visuals with extruding effects for a layer of dynamic immersion.
+								For the key visual, I went with a richly colors and extruding effects to express dynamic immersion.
 								Immediately under the key visual, I added a main feature summary panel to improve the consumer shopping experience.
+								I followed with a series of comparison visuals to demonstrate the improved media experience of the Optix monitor compared to
+								generic competitors.
 							</p>
 						</div>
 
