--- a/work/msi_public_domain/index.html
+++ b/work/msi_public_domain/index.html
@@ -69,7 +69,8 @@
 							</p>
 							<p>
 								The social post consisted of an album that initially captures audience attention
-								with legitimately attractive product-reskins that eventually develop into humor with escalating absurdity.
+								with legitimately attractive product-reskins. As the audience explores the album, they will be met with
+								increasingly ridiculous applications of public domain art that develop into humorous absurdity.
 							</p>
 						</div>
 
